--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ authors = [
 ]
 description = ""
 requires-python = ">=3.7"
-dependencies = []
+dependencies = [
+    "numpy",
+    "pandas",
+    "torch",
+]
 
 [project.optional-dependencies]
 test = ["pytest"]
